Fix close button alignment onclose button=>FilterModal

--- a/app/styles/components/filterModal.less
+++ b/app/styles/components/filterModal.less
@@ -19,5 +19,8 @@
         padding-right: 20px;
         font-size: inherit;
     }
+    .ant-modal-close-x {
+        padding-top: 20px;
+    }
   }
 }
